t+bg:[[хермелин]] t-balance ([[WT:EDIT|Assisted]]) <ermine#16105163>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -86,10 +86,11 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 {{trans-bottom}}
 
 {{trans-top|the white fur of this animal}}
+* Bulgarian: {{t|bg|хермелин|m|sc=Cyrl}}
 * Czech: {{t-|cs|hranostaj|m}}
 * Finnish: [[kärpännahka]], [[hermeliini]]
-* French: {{t+|fr|hermine|f}}
 {{trans-mid}}
+* French: {{t+|fr|hermine|f}}
 * German: {{t|de|Hermelin|m}}
 * [[Volapük]]: {{t|vo|härminaskin}}, {{t|vo|härminapläd}}, {{t|vo|visafot}}
 {{trans-bottom}}
