--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -162,6 +162,20 @@ From {{etyl|ru|fi}}
 
 ----
 
+==Norwegian==
+
+===Etymology===
+From {{etyl|ru|no}} {{term|водка|lang=ru}}.
+
+===Pronunciation===
+* {{IPA|/ʋɔdkɑ/|lang=no}}, {{X-SAMPA|/POdkA/|lang=no}}
+* {{rhymes|ɑ|lang=no}}
+
+===Noun===
+{{head|no|noun|m}}
+
+# [[#English|vodka]]
+
 ==Slovak==
 
 ===Etymology===
