--- a/en/s/seafloor spreading.741098.wikitext
+++ b/en/s/seafloor spreading.741098.wikitext
@@ -4,8 +4,13 @@
 {{en-noun|sg=[[seafloor]] [[spreading]]|-}}
 
 # {{geology}} The outward movement of the seafloor from central underwater ridges as a result of [[plate tectonics]]; the major cause of [[continental drift]].
+
 ====Translations====
+{{trans-top|outward movement of the seafloor}}
 * German: {{t-|de|Ozeanbodenspreizung|f}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====External links====
 * {{pedialite}}
 
