/* Etymology */Etymology: "<" to "from" using [[Project:AWB|AWB]] <bahasa#16117247>

--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Etymology===
-From {{etyl|id|nl}} {{term|bahasa|lang=id}} < {{etyl|sa|nl}} {{term|भाषा|tr=bhāṣā|lang=sa}}.
+From {{etyl|id|nl}} {{term|bahasa|lang=id}}, from {{etyl|sa|nl}} {{term|भाषा|tr=bhāṣā|lang=sa}}.
 
 ===Noun===
 {{head|nl|noun|g=g}}
