/* Etymology */Etymology: "<" to "from" using [[Project:AWB|AWB]] <ostensive#16124589>

--- a/en/o/ostensive.773720.wikitext
+++ b/en/o/ostensive.773720.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{term|ostensif|lang=fr}} < {{etyl|ML.|en}} {{term|ostensivus|lang=la}}
+From {{etyl|fr|en}} {{term|ostensif|lang=fr}}, from {{etyl|ML.|en}} {{term|ostensivus|lang=la}}
 
 ===Adjective===
 {{en-adj}}
