--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -1,5 +1,6 @@
-{{also|-mania|mánia|mânia|manía}}
+{{also|-mania|mánia|mânia|manía|-manía}}
 ==English==
+{{wikipedia}}
 
 ===Etymology===
 From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανία||madness|tr=mania|lang=grc|sc=polytonic}}.
@@ -10,7 +11,6 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * {{rhymes|eɪnɪə}}
 
 ===Noun===
-{{wikipedia}}
 {{en-noun}}
 
 # Violent derangement of mind; madness; insanity.
@@ -26,6 +26,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 ====Translations====
 {{trans-top|violent derangement}}
 * Armenian: {{t|hy|մոլուցք|tr=moluc’k’}}
+* [[Catalan]]: {{t|ca|mania|f}}
 * Chinese:
 *: Mandarin: {{t|zh|躁狂癥|sc=Hani}}, {{t|zh|躁狂症|tr=zàokuángzhèng|sc=Hani}}
 * Danish: {{t-|da|mani|c}}
@@ -44,17 +45,19 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 {{trans-bottom}}
 
 {{trans-top|excessive desire}}
+* [[Catalan]]: {{t|ca|mania|f}}
 * Chinese:
 *: Mandarin: {{t|zh|狂熱|sc=Hani}}, {{t|zh|狂热|tr=kuángrè|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t|fi|mania}}
 * Greek: {{t|el|μανία|f|tr=manía|sc=Grek}}
+* Spanish: {{t|es|manía|f}}
 {{trans-bottom}}
 
 ===Anagrams===
 * [[amain#English|amain]], [[Amina#English|Amina]], [[amnia#English|amnia]], [[anima#English|anima]]
 
-[[Category:Manias|*]]
+[[Category:Manias]]
 
 ----
 
@@ -63,7 +66,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 ===Noun===
 {{fi-noun}}
 
-# [[#English|mania]]
+# {{l|en|mania}}
 
 ====Declension====
 {{fi-decl-kulkija|mani}}
@@ -96,7 +99,7 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 ===Noun===
 {{it-noun|mani|f|a|e}}
 
-# [[#English|mania]]
+# {{l|en|mania}}
 # [[habit]] (if strange)
 # [[quirk]]
 # [[bug]]
@@ -116,7 +119,7 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 ===Noun===
 {{la-noun|mania|maniae|maniae|f|first}}
 
-# [[craze]], [[#English|mania]], [[madness]]
+# [[craze]], {{l|en|mania}}, [[madness]]
 
 ====Inflection====
 {{la-decl-1st|mani}}
@@ -129,6 +132,7 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 * Spanish: {{l|es|manía}}
 
 ----
+
 ==Tahitian==
 
 ===Adjective===
