--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative]], [[accusative]], and [[vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
+From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative]], [[accusative]], and [[vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la|sort=um}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/əm/}}
@@ -98,7 +98,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * Both the plural forms of ''-a'' and ''-ums'' are used in everyday language, but the latter is sometimes proscribed against.
 
 ===See also===
-* [[-s#Dutch|-s]]
+* {{l|nl|-s}}
 
 ----
 
@@ -128,27 +128,28 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * {{l|sco|-im}}, {{l|sco|-om}}, {{l|sco|-am}}, {{l|sco|-em}}
 
 ===Etymology 1===
-From {{etyl|enm|sco}}, from {{etyl|ang|sco}} {{term|-um|lang=ang}}, dative plural ending used to form adverbials.
+From {{etyl|enm|sco|sort=um}}, from {{etyl|ang|sco|sort=um}} {{term|-um|lang=ang}}, dative plural ending used to form adverbials.
 
 ====Suffix====
 {{head|sco|suffix}}
 
-# {{rare}} Used to form adverbs.
+# {{rare|lang=sco|skey=um}} Used to form adverbs.
 #: {{term|legim||astride|lang=sco}}
 
 ===Etymology 2===
 Probably of jocular formation, based partly on Latin {{term|-um|lang=la}} and partly an altered form of {{term|-ings|-in(g)s|lang=sco}}, a verbal noun ending.
 
 ====Suffix====
-{{head|sco|suffix}}
+{{head|sco|suffix|sort=um}}
 
 # Added to nouns or verbs to form nouns with diminutive or hypocoristic force.
 
 ----
+
 ==Turkish==
 
 ===Suffix===
-'''-um'''
+{{head|tr|suffix|sort=um}}
 
 # First-person singular possessive suffix denoting singular possession in words ending in a consonant.
 #: ''[[okul]] - [[okulum]]''
@@ -178,14 +179,12 @@ Probably of jocular formation, based partly on Latin {{term|-um|lang=la}} and pa
 * It must be used with an [[apostrophe]] while using with a proper noun.
 *: ''[[Umut]] - [[Umut'um]]''
 
-[[Category:Turkish suffixes|um]]
-
 ----
 
 ==Volapük==
 
 ===Suffix===
-{{head|vo|suffix}}
+{{head|vo|suffix|sort=um}}
 
 # {{non-gloss definition|Used to form the comparative form of adjectives.}}
 
