--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -25,7 +25,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 #: ''Is it 12 o'clock already? '''Then''' it's time for me to leave.''
 #: ''You don't like potatoes? What do you want me to cook, '''then'''?''
 # {{context|sequence}} [[at the same time|At the same time]]; [[on the other hand]].
-#: ''That’s a nice shirt, but '''then''', so is the other one.''
+#: ''That’s a nice shirt; '''then''', so is the other one.''
 # {{obsolete}} At the time that; [[when]].
 #* '''1485''', [[w:Thomas Malory|Sir Thomas Malory]], ''Le Morte Darthur'', Book I.23, reprinted 1817, Sir Thomas Malory, [[w:William Caxton|William Caxton]], ''Morte Darthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
 #*: '''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym [...].
