--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -196,7 +196,7 @@ From {{etyl|gmh|de}} {{term|rot|rōt|lang=gmh|red, red-haired}}, from {{etyl|goh
 ==Old High German==
 
 ===Etymology===
-From {{proto|Germanic|raudaz|lang=goh}} (compare Old English {{term|read|rēad|lang=ang}}, Old Norse {{term|rauðr|lang=non}}) < {{proto|Indo-European|reudh-|lang=goh}}.
+From {{proto|Germanic|raudaz|lang=goh}} (compare Old English {{term|read|rēad|lang=ang}}, Old Norse {{term|rauðr|lang=non}}), from {{proto|Indo-European|reudh-|lang=goh}}.
 
 ===Adjective===
 {{head|goh|adjective|head=rōt}}
