t+dlm:[[capraina]] ([[WT:EDIT|Assisted]]) <she-goat#16156799>

--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -8,6 +8,7 @@
 ====Translations====
 {{trans-top|female goat}}
 * Armenian: {{t+|hy|այծ|tr=ayç}}
+* Dalmatian: {{tø|dlm|capraina|f}}
 * Finnish: {{t+|fi|kuttu}}
 * German: {{t+|de|Ziege|f}},  {{t+|de|Geiß|f}}, {{t+|de|Zicke|f}}, {{t-|de|Zibbe|f}}
 * [[Low German]] ([[Low Saxon]]): {{t|nds|Zeeg|f}}, {{t|nds|Zääg|f}}, {{t|nds|Seeg|f}}, {{t|nds|Sääg|f}}
