--- a/en/t/tubular bells.855148.wikitext
+++ b/en/t/tubular bells.855148.wikitext
@@ -1,11 +1,16 @@
 ==English==
-===Noun===
 {{wikipedia|Tubular bell}}
-'''[[tubular]] [[bells]]'''
-#a percussion instrument consisting of a set of tuned metal tubes that are struck with a mallet
-====Translations====
-*Chinese: [[管钟]] ([[guǎnzhōng]])
-====Related terms====
-*[[chime]]
 
-[[Category:English nouns]]
+===Noun===
+{{en-plural noun|head=[[tubular]] [[bells]]}}
+
+# a percussion instrument consisting of a set of tuned metal tubes that are struck with a mallet
+
+====Translations====
+{{trans-top|instrument}}
+* Chinese: [[管钟]] ([[guǎnzhōng]])
+{{trans-mid}}
+{{trans-bottom}}
+
+===See also===
+* [[chime]]
