--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -48,6 +48,7 @@
 * [[Catalan]]: {{t-|ca|bastó|m}}
 * [[Chamicuro]]: {{tø|ccc|chaskolo}}
 * Czech: {{t+|cs|hůl|f}}
+* Danish: {{t|da|stav|c}}; {{t|da|stang|c}}
 * Dutch: {{t+|nl|staf|c}}
 * Esperanto: {{t|eo|bastono}}
 * Finnish: {{t+|fi|sauva}}, {{t-|fi|salko}}
@@ -93,7 +94,7 @@
 {{trans-top|employees of a business}}
 * [[Catalan]]: {{t+|ca|staff|m}}, {{t-|ca|plantilla|f}}
 * Czech: {{t-|cs|personál|m}}
-* Danish: {{t|da|stav|c}}; {{t|da|stang|c}}; {{t|da|stab|c}}, {{t|da|personale|n}}
+* Danish: {{t|da|stab|c}}, {{t|da|personale|n}}
 * Dutch: {{t+|nl|medewerkers|p}}, {{t|nl|personeel|n}}
 * Finnish: {{t-|fi|henkilöstö}}, {{t-|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
