--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -268,6 +268,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Korean: [[아양떨다]] (ayang-tteolda)
 {{trans-mid}}
 * [[Macedonian]]: {{t-|mk|пуши|tr=púši}}, {{t|mk|дудла|tr=dúdla}}
+* Persian: {{t|fa|ساک زدن|sc=fa-Arab}}
 * Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
 * Russian: [[сосать]] (sosát') {{impf}}, [[отсосать]] (otsosát') {{pf.}}
 * Serbian:
