--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -268,9 +268,9 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Korean: [[아양떨다]] (ayang-tteolda)
 * Macedonian: {{t-|mk|пуши|tr=púši}}, {{t|mk|дудла|tr=dúdla}}
 {{trans-mid}}
-* Persian: {{t|fa|ساک زدن|sc=fa-Arab}}
+* Persian: {{t|fa|ساک زدن|tr=sâk zadan|sc=fa-Arab}}
 * Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
-* Russian: [[сосать]] (sosát') {{impf}}, [[отсосать]] (otsosát') {{pf.}}
+* Russian: {{t|ru|сосать|tr=sosát’}} {{impf}}, {{t|ru|отсосать|tr=otsosát’}} {{pf}}
 * Serbian:
 *:* Cyrillic: [[пушити]]
 *:* Roman: [[pušiti]]
