/* Pronunciation */ + audio <genet#16168830>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -4,7 +4,8 @@
 [[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common genet, ''Genetta genetta'']]
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈdʒɛnɪt/}}
+* {{a|UK|US}} {{IPA|/ˈdʒɛn.ɪt/}}
+* {{audio|en-us-genet.ogg|Audio (US)}}
 * {{rhymes|ɛnɪt}}
 
 ===Etymology 1===
