t+sv:[[otillständig]] ([[WT:EDIT|Assisted]]) <indecorous#16169058>

--- a/en/i/indecorous.741298.wikitext
+++ b/en/i/indecorous.741298.wikitext
@@ -9,7 +9,7 @@
 {{trans-top|improper}}
 * Finnish: {{t|fi|sopimaton}}
 {{trans-mid}}
-* Swedish: {{t|sv|opassande}}, {{t|sv|otillbörlig}}
+* Swedish: {{t|sv|opassande}}, {{t|sv|otillbörlig}}, {{t|sv|otillständig}}
 {{trans-bottom}}
 
 [[et:indecorous]]
