--- a/en/q/Qiana.4314.wikitext
+++ b/en/q/Qiana.4314.wikitext
@@ -1,10 +1,11 @@
 ==English==
 
-===Noun===
-'''Qiana''' &trade;
+===Proper noun===
+{{en-proper noun}} &trade;
 
-# a silky [[material]] made from [[nylon]] fibers.
+# A silky [[material]] made from [[nylon]] fibers.
 
 [[Category:English trademarks]]
 [[Category:English words containing Q not followed by U]]
+
 [[sr:Qiana]]
