--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -127,9 +127,9 @@
 ===Verb===
 {{en-verb}}
 
-# {{rfv-sense}} To polish or wipe with a leather.
-# {{rfv-sense}} To beat or [[thrash]] with a leather.
 # To cover with leather.
+# To strike  forcefully.
+#: He ''leathered'' the ball all the way down the street.
 
 ===Derived terms===
 {{rel-top3|Terms derived from the adjective, noun, or verb ''leather''}}
