--- a/en/c/Camelus dromedarius.34060.wikitext
+++ b/en/c/Camelus dromedarius.34060.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
-===Noun===
-'''Camelus dromedarius'''
+===Proper noun===
+{{infl|mul|proper noun|head=[[Camelus]] [[dromedarius]]}}
 
 # Scientific name for the [[dromedary]], a [[camel]].
 # A large even-toed ungulate native to northern Africa and western Asia, and the best-known member of the camel family.
