--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -16,6 +16,15 @@ From {{prefix|multi|million}}.
 * Italian: {{t|it|multimillione}}
 {{trans-bottom}}
 
+====Related terms====
+* [[multimillionaire]]
+* [[million]]
+
+====See also====
+* [[megamillion]]
+* [[supermillion]]
+* [[billion]]
+
 [[fr:multimillion]]
 [[ko:multimillion]]
 [[ru:multimillion]]
