--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -48,7 +48,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * French: {{t+|fr|bulle|f}}
 * Georgian: {{t-|ka|ბუშტი|tr=bušti|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Blase|f}}
-* Greek: {{t+|el|φυσαλίδα|f|tr=fisalíδa}},  {{t|el|πομφόλυγα|f|tr=pomfóliγa}}
+* Greek: {{t+|el|φυσαλίδα|f|tr=fysalída}|sc=Grek}, {{t|el|πομφόλυγα|f|tr=pomfólyga|sc=Grek}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Hungarian: {{t+|hu|buborék}}
 * Italian: {{t+|it|bolla|f}}
@@ -84,7 +84,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * French: {{t+|fr|trou|m}}
 * German: {{t+|de|Blase|f}}
 {{trans-mid}}
-* Greek: {{t+|el|φυσαλίδα|tr=fisalíδa}}
+* Greek: {{t+|el|φυσαλίδα|tr=fysalída}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|меурче|n|tr=méurče}}
 * Portuguese: {{t+|pt|bolha|f}}
@@ -98,7 +98,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Dutch: {{t|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
 * German: {{t+|de|Blase|f}}
-* Greek: {{t+|el|φυσαλίδα|f|tr=fisalíδa}},  {{t+|el|φούσκα|f|tr=fúska}}
+* Greek: {{t+|el|φυσαλίδα|f|tr=fysalída|sc=Grek}}, {{t+|el|φούσκα|f|tr=foúska|sc=Grek}}
 {{trans-mid}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|меур|m|tr=méur}}
@@ -114,7 +114,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * French: {{t+|fr|bulle|f}}
 * German: {{t+|de|Blase|m}}
 {{trans-mid}}
-* Greek: {{t+|el|φούσκα|f|tr=fúska}}
+* Greek: {{t+|el|φούσκα|f|tr=foúska|sc=Grek}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Italian: {{t+|it|bolla|f}}
 * Spanish: {{t+|es|burbuja|f}}
