--- a/en/s/seafloor spreading.741098.wikitext
+++ b/en/s/seafloor spreading.741098.wikitext
@@ -1,9 +1,13 @@
 ==English==
+===Alternative forms===
+*[[sea-floor spreading]]
 
 ===Noun===
 {{en-noun|sg=[[seafloor]] [[spreading]]|-}}
 
 # {{geology}} The outward movement of the seafloor from central underwater ridges as a result of [[plate tectonics]]; the major cause of [[continental drift]].
+#*'''2004''', {{w|Richard Fortey}}, ''The Earth'', Folio Society 2011, p. 143:
+#*:However, the recognition of '''sea-floor spreading''' made sense of continental splitting without having to invoke earth expansion.
 
 ====Translations====
 {{trans-top|outward movement of the seafloor}}
