t+arz:[[قرنبيطة]] ([[WT:EDIT|Assisted]]) <cauliflower#16207659>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -21,6 +21,7 @@
 {{trans-top|Vegetable}}
 * [[Afrikaans]]: {{t|af|blomkool|xs=Afrikaans}}
 * Arabic: {{t|ar|قرنبيط|m|tr=qarnabiiT}},  {{t|ar|قنبيط|m|tr=qunnabiiT}}
+*: Egyptian Arabic: {{tø|arz|قرنبيطة|f|tr=ʔarnabiṭa|sc=Arab}}
 * Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb}}
 * [[Basque]]: {{t|eu|azalore|xs=Basque}}
 * Bosnian: {{t|bs|karfiol|m}}
