--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -21,7 +21,7 @@
 {{trans-top|Vegetable}}
 * [[Afrikaans]]: {{t|af|blomkool|xs=Afrikaans}}
 * Arabic: {{t|ar|قرنبيط|m|tr=qarnabiiT}},  {{t|ar|قنبيط|m|tr=qunnabiiT}}
-*: Egyptian Arabic: {{tø|arz|قرنبيطة|f|tr=ʔarnabiṭa|sc=Arab}}, {{tø|arz|قرنبيط|m|p|tr=ʔarnabiiṭ|sc=Arab}}
+*: Egyptian Arabic: {{tø|arz|قرنبيط|m|p|tr=ʔarnabiiṭ|sc=Arab}}
 * Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb}}
 * [[Basque]]: {{t|eu|azalore|xs=Basque}}
 * Bosnian: {{t|bs|karfiol|m}}
@@ -66,6 +66,8 @@
 {{trans-bottom}}
 
 {{trans-top|Edible head of a cauliflower plant}}
+* Arabic: {{t|ar|قرنبيط|m|tr=qarnabiiT}},  {{t|ar|قنبيط|m|tr=qunnabiiT}}
+*: Egyptian Arabic: {{tø|arz|قرنبيطة|f|tr=ʔarnabiṭa|sc=Arab}}, {{tø|arz|قرنبيط|m|p|tr=ʔarnabiiṭ|sc=Arab}}
 * Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
 * Greek: {{t+|el|κουνουπίδι|n|tr=kunupídi}}
 * Hungarian: {{t+|hu|karfiol}}
