--- a/en/a/allogamy.775548.wikitext
+++ b/en/a/allogamy.775548.wikitext
@@ -1,4 +1,7 @@
 ==English==
+{{wikipedia}}
+===Etymology===
+{{confix|allo|gamy}}
 
 ===Noun===
 {{en-noun|-}}
@@ -7,7 +10,6 @@
 
 ====See also====
 * [[autogamy]]
-*{{pedia}}
 
 ====Translations====
 {{trans-top|fertilization}}
