--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -50,7 +50,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * [[Lao]]: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
 * Latin: {{t|la|harundo Indica|f|alt=harundō Indica}}
 * [[Macedonian]]: {{t-|mk|бамбус|m|tr=bámbus}}
-* Malay: [[pokok]] [[buluh]]
+* Malay: [[pokok]] [[buluh]], {{t|ms|bambu}}
 * Navajo: {{tø|nv|lókʼaatsoh}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m}}
