/* Translations */ +ru <consume#16217586>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -50,6 +50,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Norwegian: {{t|no|forbruke}}, {{t|no|bruke opp}}
 * Persian: {{t|fa|مصرف کردن|sc=fa-Arab}}
 * Romanian: {{t-|ro|consuma}}
+* Russian: {{t|ru|потреблять}}, {{t|ru|расходовать}}
 * Vietnamese: {{t|vi|dùng}}, {{t|vi|tiêu thụ}}
 {{trans-bottom}}
 
@@ -66,6 +67,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Norwegian: {{t+|no|fortære}}
 * Persian: {{t|fa|مصرف کردن|sc=fa-Arab}}
 * Romanian: {{t-|ro|consuma}}
+* Russian: {{t|ru|потреблять}}, {{t|ru|поедать}}
 * Vietnamese: {{t|vi|ăn}}
 {{trans-bottom}}
 
@@ -76,6 +78,7 @@ From {{etyl|la}} ''[[consumere]]''.
 {{trans-mid}}
 * Persian: {{t|fa|تمام وجود کسی را فرا گرفتن|sc=fa-Arab}}
 * Romanian: {{qualifier|intransitive}} {{t|ro|se consuma}}
+* Russian: {{t|ru|занимать}}, {{t|ru|поглощать}}
 {{trans-bottom}}
 
 {{trans-top|to destroy completely}}
@@ -87,13 +90,15 @@ From {{etyl|la}} ''[[consumere]]''.
 * Hungarian: {{t+|hu|elpusztít}}, {{t|hu|felemészt}}
 * Italian: {{t|it|consumare}}
 * Persian: {{t|fa|نابود شدن|sc=fa-Arab}}
+* Russian: {{t|ru|поглощать}}
 * Vietnamese: {{t|vi|tàn phá}}
 {{trans-bottom}}
 
-{{checktrans}}
+{{checktrans-top}}
 * {{ttbc|la}}: [[consumere]]
 * {{ttbc|es}}: [[consumir]]
 * {{ttbc|tr}}: [[tüketmek]], [[yoğaltmak]]
+{{trans-bottom}}
 
 ----
 
