--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -33,6 +33,7 @@
 {{trans-mid}}
 * Japanese: {{t-|ja|アメリカ英語|tr=Amerika Eigo}}, {{t|ja|米英語|tr=Bei-Eigo}}, {{t-|ja|米語|tr=Beigo}}
 * Korean: {{t|ko|미국 영어|tr=Miguk Yeong-eo|sc=Hang}} ({{t+|ko|美國英語|sc=Hani}})
+* Malay: {{t|ms|bahasa Inggeris Amerika}}, {{t|ms|Inggeris Amerika}}
 * Norwegian: {{t-|no|amerikansk-engelsk}}
 * Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t+|pt|inglês americano|m}}
