--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -25,7 +25,7 @@ From {{term|bend}}.
 # {{slang|football}} [[inaccurate]] at [[shooting]]
 #: ''That shot was so '''bent''' it left the pitch.''
 # {{colloquial|chiefly|US}} Suffering from [[the bends]]
-# high from using both [[Cannabis|marijuana]] and [[Alcohol|alcohol]].
+# high from using both [[Cannabis|marijuana]] and [[alcohol]].
 #: ''Man, I am so '''bent''' right now!''
 
 =====Synonyms=====
