--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -65,10 +65,11 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * Finnish: {{t+|fi|pollari}},  {{t+|fi|kyttä}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t+|fr|poulet|m}} (''chicken'')
 * German: {{t|de|Gendarm}}
+* Greek: {{t|el|μπάτσος|m|tr=bátsos|sc=Grek}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t-|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t-|hu|zsaru}}
-{{trans-mid}}
 * Norwegian: {{t+|no|purk|m}}
+{{trans-mid}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
 * Russian: {{t|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t|ru|лягавый|m|tr=ljagávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}
 * Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
