--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|ang}} *{{term||crōc|hook, bend, crook|lang=ang}}, from {{proto|Germanic|krōkaz|bend, hook|lang=en}}, from {{proto|Indo-European|greg-|tracery, basket, bend|lang=en}}. Cognate with {{etyl|nl|-}} {{term|kreuk||a bend, fold, wrinkle|lang=nl}}, {{etyl|gml|-}} {{term|kroke|lang=gml}}, {{term|krake||fold, wrinkle|lang=gml}}, {{etyl|da|-}} {{term|krog||crook, hook|lang=da}}, {{etyl|sv|-}} {{term|krok||crook, hook|lang=sv}}, {{etyl|is|-}} {{term|krökur||hook|lang=is}}.
+
 ===Pronunciation===
 * {{IPA|/kɹʊk/}}
 * {{audio|en-us-crook.ogg|Audio (US)}}
@@ -8,14 +11,21 @@
 ===Noun===
 {{en-noun}}
 
-# A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
-#* '''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]:
-#*: ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.''<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
+# A [[bend]]; [[turn]]; [[curve]]; [[curvature]]; a [[flexure]].
+#: ''She held the baby in the '''crook''' of her arm.''
+# A bending of the knee; a [[genuflection]].
+# A [[bent]] or curved part; a curving piece or portion (of anything).
+#: ''the '''crook''' of a cane''
+# {{obsolete}} A [[lock]] or [[curl]] of hair.
+# {{obsolete}} A [[gibbet]].
+# {{obsolete}} A support beam consisting of a post with a cross-beam resting upon it; a bracket or truss consisting of a vertical piece, a horizontal piece, and a strut.
 # A [[shepherd's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
 #* '''1970''', ''The New English Bible with the Apocrypha, Oxford Study Edition'', published 1976, Oxford University Press; ''Psalms'' 23-4, page 583:
 #*: Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
-# A [[bend]].
-#: ''She held the baby in the '''crook''' of her arm.''
+# An [[artifice]]; a [[trick]]; a [[contrivance]].
+# A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
+#* '''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]:
+#*: ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.''<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
 
 ====Synonyms====
 * (criminal) See [[Wikisaurus:criminal]]
