t+zh:[[麝鼠]] t-balance t+ja:[[マスクラット]] ([[WT:EDIT|Assisted]]) <muskrat#16225975>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -31,6 +31,8 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * [[Breton]]: {{t|br|razh-musk|xs=Breton}}
 * Bulgarian: {{t|bg|мускус|tr=muskus}}
 * Cherokee: {{t-|chr|ᏎᎳᎩᏍᏆ|tr=selagisqua|sc=Cher|xs=Cherokee}}
+* Chinese:
+*: Mandarin: {{t|zh|麝鼠|tr=shèshǔ|sc=Hani}}
 * Croatian: {{t|hr|mošusni štakor|mošusni}}, {{t|hr|bizamski štakor}}
 * Czech: {{t-|cs|ondatra}}
 * Danish: {{t|da|bisamrotte}}
@@ -47,11 +49,12 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Icelandic: {{t|is|moskusrotta}}, {{t|is|bísamrotta}}
 * Irish: {{t|ga|muscfhrancach|xs=Irish}}
 * Italian: {{t|it|topo muschiato|m}}
+* Japanese: {{t|ja|マスクラット|tr=masukuratto|sc=Jpan}}
 * [[Kannada]]: {{t+|kn|ಸುಂಡಿಲಿ|sc=Knda|xs=Kannada}}
+{{trans-mid}}
 * Korean: {{t-|ko|사향쥐|tr=sahyangjwi|sc=Hang}}
 * Latvian: {{t-|lv|ondatra|xs=Latvian}}
 * Lithuanian: {{t-|li|ondatra|xs=Limburgish}}
-{{trans-mid}}
 * [[Lower Sorbian]]: {{tø|dsb|bizamowy šćurk|xs=Lower Sorbian}}
 * [[Macedonian]]: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma|xs=Maltese}}
