t+es:[[entonces]] ([[WT:EDIT|Assisted]]) <then#16226239>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -243,6 +243,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 
 ====Translations====
 {{trans-top|being so at that time}}
+* Spanish: {{t|es|entonces|m}}
 * Swedish: {{t+|sv|dess}}, {{t+|sv|då}}
 {{trans-mid}}
 {{trans-bottom}}
