/* English */  split; +citations <crook#16232946>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -1,14 +1,14 @@
 ==English==
 
-===Etymology===
-From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|ang}} *{{term||crōc|hook, bend, crook|lang=ang}}, from {{proto|Germanic|krōkaz|bend, hook|lang=en}}, from {{proto|Indo-European|greg-|tracery, basket, bend|lang=en}}. Cognate with {{etyl|nl|-}} {{term|kreuk||a bend, fold, wrinkle|lang=nl}}, {{etyl|gml|-}} {{term|kroke|lang=gml}}, {{term|krake||fold, wrinkle|lang=gml}}, {{etyl|da|-}} {{term|krog||crook, hook|lang=da}}, {{etyl|sv|-}} {{term|krok||crook, hook|lang=sv}}, {{etyl|is|-}} {{term|krókur||hook|lang=is}}.
-
 ===Pronunciation===
 * {{IPA|/kɹʊk/}}
 * {{audio|en-us-crook.ogg|Audio (US)}}
 *: {{rhymes|ʊk}}
 
-===Noun===
+===Etymology 1===
+From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|ang}} *{{term||crōc|hook, bend, crook|lang=ang}}, from {{proto|Germanic|krōkaz|bend, hook|lang=en}}, from {{proto|Indo-European|greg-|tracery, basket, bend|lang=en}}. Cognate with {{etyl|nl|-}} {{term|kreuk||a bend, fold, wrinkle|lang=nl}}, {{etyl|gml|-}} {{term|kroke|lang=gml}}, {{term|krake||fold, wrinkle|lang=gml}}, {{etyl|da|-}} {{term|krog||crook, hook|lang=da}}, {{etyl|sv|-}} {{term|krok||crook, hook|lang=sv}}, {{etyl|is|-}} {{term|krókur||hook|lang=is}}.
+
+====Noun====
 {{en-noun}}
 
 # A [[bend]]; [[turn]]; [[curve]]; [[curvature]]; a [[flexure]].
@@ -20,21 +20,21 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 # {{obsolete}} A [[gibbet]].
 # {{obsolete}} A support beam consisting of a post with a cross-beam resting upon it; a bracket or truss consisting of a vertical piece, a horizontal piece, and a strut.
 # A [[shepherd's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
-#* '''1970''', ''The New English Bible with the Apocrypha, Oxford Study Edition'', published 1976, Oxford University Press; ''Psalms'' 23-4, page 583:
+#* '''1970''', ''The New English Bible with the Apocrypha, Oxford Study Edition'', published 1976, Oxford University Press, ''Psalms'' 23-4, page 583:
 #*: Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
 # An [[artifice]]; a [[trick]]; a [[contrivance]].
 # A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
-#* '''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]:
-#*: ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.''<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
+#* '''1973''' November 17, [[w:Richard Nixon|Richard Nixon]], reported 1973 November 18, ''The Washington Post'', [http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm ''Nixon Tells Editors, ‘I'm Not a Crook’''],
+#*: "People have got to know whether or not their President is a '''crook'''. Well, I′m not a '''crook'''. I′ve earned everything I′ve got."
 
-====Synonyms====
-* (criminal) See [[Wikisaurus:criminal]]
+=====Synonyms=====
+* {{sense|criminal}} See [[Wikisaurus:criminal]]
 
-====Derived terms====
+=====Derived terms=====
 * [[by hook or by crook]]
-* {{US}} [[by hook or crook]]
+* [[by hook or crook]] {{qualifier|US}} 
 
-====Translations====
+=====Translations=====
 {{trans-top|a criminal who steals}}
 * Bosnian: {{t|bs|lopov|m}}
 * Bulgarian: {{t|bg|крадец|m}}
@@ -66,21 +66,18 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Russian: {{t|ru|изгиб|sc=Cyrl}}
 {{trans-bottom}}
 
-====References====
-<references/>
-
-===Verb===
+====Verb====
 {{en-verb}}
 
 # {{transitive}} To [[bend]].
 #: ''He '''crooked''' his finger toward me.''
-#* '''1917''', Leo Tolstoy, ''[[s:Anna Karenina|Anna Karenina]]'', part 4, chapter 5 (as translated by [[w:Constance Garnett|Constance Garnett]])
-#*: "...In the following cases: physical defect in the married parties, desertion without communication for five years," he said, '''crooking''' a short finger covered with hair{{...}}
+#* '''1917''', [[w:Leo Tolstoy|Leo Tolstoy]], [[w:Constance Garnett|Constance Garnett]] (translator)''[[s:Anna Karenina|Anna Karenina]]'', Part 4, Chapter 5,
+#*: “{{...}}In the following cases: physical defect in the married parties, desertion without communication for five years,” he said, '''crooking''' a short finger covered with hair{{...}}.
 
-====Derived terms====
-* {{l|en|crooked}}
+=====Derived terms=====
+* [[crooked]] {{qualifier|adjective}}
 
-====Translations====
+=====Translations=====
 {{trans-top|to bend}}
 * Bulgarian: {{t|bg|извивам}}
 * Finnish: {{t-|fi|koukistaa}}
@@ -88,19 +85,37 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * German: [[krümmen]]
 {{trans-bottom}}
 
-===Adjective===
+===Etymology 2===
+From {{term|crooked||dishonestly come by}}. <ref>[http://andc.anu.edu.au/australian-words/meanings-origins?field_alphabet_value=81 Australian National Dictionary Centre Home » Australian words » Meanings and origins of Australian words and idioms » C]</ref>
+
+====Adjective====
 {{en-adj}}
 
-# {{Australia|New Zealand|slang}} [[ill]], [[sick]].
-# {{Australia|New Zealand|slang}} not [[right]], not up to [[standard]]
+# {{Australia|New Zealand|slang}} Bad, unsatisfactory, not up to [[standard]].
 #: ''That work you did on my car is '''crook''', mate''
 #: ''Not turning up for training was pretty '''crook'''.''
+#: ''Things are '''crook''' at Tallarook.''
+#* '''2004''', [[w:Robert Barnard|Robert Barnard]], ''A Cry from the Dark'', [http://books.google.com.au/books?id=NoOp5G-CGqQC&pg=PA21&dq=%22are|be+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=R4QzT82mDY7qmAWVqN2DAg&redir_esc=y#v=onepage&q=%22are|be%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 21],
+#*: “Things are '''crook''' at home at the moment.”
+#*: “They′re always '''crook''' at my home.”
+# {{Australia|New Zealand|slang}} [[ill|Ill]], [[sick]].
+#: ''I′m feeling a bit '''crook'''.''
+# {{Australia|New Zealand|slang}} [[annoyed|Annoyed]], [[angry]]; [[upset]].
+#: ''be '''crook''' at/about''; ''go '''crook''' at''
+#* '''2006''', Jimmy Butt, Felicity Dargan, ''I've Been Bloody Lucky: The Story of an Orphan Named Jimmy Butt'', [http://books.google.com.au/books?id=hpLU50pmCs0C&pg=PA17&dq=%22go|gone|went+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go|gone|went%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 17],
+#*: Ann explained to the teacher what had happened and the nuns went '''crook''' at me too.
+#* '''2007''', Jo Wainer, ''Bess'', ''Lost: Illegal Abortion Stories'', [http://books.google.com.au/books?id=ln97vrDVN58C&pg=PA159&dq=%22go|gone|went+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go|gone|went%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 159],
+#*: I went home on the tram, then Mum went '''crook''' at me because I was late getting home—I had tickets for Mum and her friend to go to the Regent that night and she was annoyed because I was late.
+#* '''2007''', Ruby Langford Ginibi, ''Don′t Take Your Love to Town'', [http://books.google.com.au/books?id=6xEKJLBTnkQC&pg=PA100&dq=%22go|gone|went+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=KYozT_ndH8_omAX1ovSSAg&redir_esc=y#v=onepage&q=%22go|gone|went%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 100],
+#*: I went '''crook''' at them for not telling me and as soon as she was well enough I took her home to the camping area and she soon picked up.
+#* '''2009''', Carolyn Landon, ''Cups With No Handles: Memoir of a Grassroots Activist'', [http://books.google.com.au/books?id=AkMZc1dAwCsC&pg=PA234&dq=%22go|gone|went+crook+at%22+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=0oUzT8KBE4X5mAX58pWJAg&redir_esc=y#v=onepage&q=%22go|gone|went%20crook%20at%22%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 234],
+#*: Mum went '''crook''' at me for wasting money, but when Don got a job and spent all his money on a racing bike, she didn′t say a thing to him.
 
-===Quotations===
-* Other Australian Usage to be sorted out
-*: to go crook at someone, something; to get angry
-*: to be crook at/about someone, something; to be annoyed, upset
-*: crook as Rookwood. To be very sick (Rookwood is the main cemetery of Sydney)
+=====Derived terms=====
+* [[crook as Rookwood]]
+
+===References===
+<references/>
 
 [[Category:en:Crime]]
 
