--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege#Anglo-Norman|plege]]'' from {{etyl|fro}} ''[[plege#Old French|plege]]'' (Modern {{etyl|fr|-}} {{term|pleige}}) from {{etyl|ML.}} {{term|plevium}}, {{term|plebium}}, from {{etyl|ML.}} {{term|plebire}} "to pledge", of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||plegan|to pledge, support, guarantee}}, from {{proto|Germanic|plegō|responsibility, habit|lang=}}, from {{proto|Indo-European|dlegh-||lang=}}. Akin to {{etyl|goh|-}} {{term|pflegan||lang=goh|to take care of, be accustomed to}}, {{etyl|osx|-}} {{term|plegan|lang=osx||to vouch for}}, {{etyl|ang|-}} {{term|pleon|lang=ang|plēon|to risk, endanger}}. More at [[plight]].
+From {{etyl|enm}} {{term|plege|plege|lang=enm}}, from {{etyl|xno}} {{term|plege|plege|lang=xno}}, from {{etyl|fro}} {{term|plege|plege|lang=fro}} (Modern {{etyl|fr|-}} {{term|pleige}}) from {{etyl|ML.}} {{term|plevium}}, {{term|plebium}}, from {{etyl|ML.}} {{term|plebire}} "to pledge", of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||plegan|to pledge, support, guarantee}}, from {{proto|Germanic|plegō|responsibility, habit|lang=}}, from {{proto|Indo-European|dlegh-||lang=}}. Akin to {{etyl|goh|-}} {{term|pflegan||lang=goh|to take care of, be accustomed to}}, {{etyl|osx|-}} {{term|plegan|lang=osx||to vouch for}}, {{etyl|ang|-}} {{term|pleon|lang=ang|plēon|to risk, endanger}}. More at [[plight]].
 
 ===Pronunciation===
 * {{IPA|/plɛdʒ/}}, {{SAMPA|/plEdZ/}}
