--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -40,7 +40,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Esperanto: {{t|eo|ondatro|xs=Esperanto}}
 * Estonian: {{t-|et|ondatra}}
 * Faroese: {{t|fo|moskusrotta|xs=Faroese}}
-* Finnish: {{t-|fi|piisami}}
+* Finnish: {{t-|fi|piisami}}, {{t|fi|piisamirotta}}
 * French: {{t+|fr|rat musqué|m}}
 * [[Galician]]: {{t|gl|aguaneira|xs=Galician}}
 * German: {{t+|de|Bisamratte|f}}
