t+lb:[[Bisamrat]] ([[WT:EDIT|Assisted]]) <muskrat#16260146>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -56,6 +56,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 * Latvian: {{t-|lv|ondatra|xs=Latvian}}
 * Lithuanian: {{t-|li|ondatra|xs=Limburgish}}
 * [[Lower Sorbian]]: {{tø|dsb|bizamowy šćurk|xs=Lower Sorbian}}
+* Luxembourgish: {{t|lb|Bisamrat}}
 * [[Macedonian]]: {{t|mk|бизамски стаорец|m|tr=bízamski stáorec}}
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma|xs=Maltese}}
 * Navajo: {{tø|nv|tábąąh mąʼii}}
