t+am:[[ነገር]] ([[WT:EDIT|Assisted]]) <thing#16270895>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -79,6 +79,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{p
 {{trans-top|a separate entity or concept}}
 * Afrikaans: {{t-|af|ding|xs=Afrikaans}}
 * Albanian: {{t+|sq|send|m|xs=Albanian}}
+* Amharic: {{t|am|ነገር|tr=nägär|sc=Ethi}}
 * Arabic: {{t|ar|شيء|m|tr=shay'|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|حاجة|f|tr=Haaga|sc=Arab|xs=Egyptian Arabic}}
 * Armenian: {{t-|hy|իր|tr=ir}}, {{t+|hy|բան|tr=ban}}
