--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -18,7 +18,7 @@
 {{trans-top|publicly administered school}}
 * Finnish: {{t+|fi|yleinen}} {{t+|fi|koulu}},  {{t+|fi|peruskoulu}}
 {{trans-mid}}
-* Khmer: {{t|km|សាលារដ្ឋ|tr=sala roth|sc=Khmr}}
+* Khmer: {{t|km|សាលារដ្ឋ|tr=sala roth|sc=Khmr}}, {{t|km|សាលាសាធារណៈ|tr=sala satheraknak|sc=Khmr}}
 * Portuguese: {{t|pt|escola pública}}
 {{trans-bottom}}
 
