--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -18,6 +18,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * [[Basque]]: {{t|eu|hobe da berandu sekula baino|xs=Basque}}
 * [[Breton]]: {{t|br|gwelloc'h diwezhat eget gwech ebet|xs=Breton}}
 * Bulgarian: {{t|bg|по-добре късно отколкото никога|tr=po-dobre kusno otkolkoto nikoga}}
+* Catalan: {{t|ca|més val tard que no mai}}
 * Chinese:
 *: Mandarin: {{t|zh|遲到總比不到好|sc=Hani}},  {{t|zh|迟到总比不到好|tr=chídào zǒng bǐ bù dào hǎo|sc=Hani}}
 * Czech: {{t-|cs|lepší pozdě než nikdy}}
