--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -1,10 +1,23 @@
 ==English==
 
-===Verb===
+===Etymology 1===
+From a corruption or variation (Spenser) of {{term|embathe|lang=en}}.
+
+====Verb====
 {{en-verb|embay|ing}}
 
-# To [[shut in]], [[enclose]], [[shelter]] or [[trap]], such as ships in a [[bay]].
-# {{obsolete}} To [[bathe]], [[soothe]] or [[lull]].
+# {{transitive|obsolete}} To [[bathe]]; [[soothe]] or [[lull]].
+
+===Etymology 2===
+From {{prefix|em|bay}}.
+
+====Alternative forms====
+* {{l|en|imbay}}
+
+====Verb====
+{{en-verb|embay|ing}}
+
+# {{transitive}} To [[shut in]], [[enclose]], [[shelter]] or [[trap]], such as ships in a [[bay]].
 
 ===References===
 * {{R:Webster 1913}}
