t+el:[[παίρνω]] t-balance ([[WT:EDIT|Assisted]]) <cop#16283168>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -37,6 +37,7 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 {{trans-top|to capture, to take ''(informal)''}}
 * Bulgarian: [[хващам]], [[пипвам]], [[арестувам]]
 {{trans-mid}}
+* Greek: {{t|el|παίρνω|tr=paírno|sc=Grek}}
 {{trans-bottom}}
 
 =====Derived terms=====
