--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -3,7 +3,8 @@
 ===Noun===
 {{en-noun}}
 
-# Any of several [[plant]]s, of the genus ''[[Asclepias]]'', that have a milky [[sap]] and have [[pod]]s that split to release seeds with silky tufts
+# Any of several [[plant]]s, of the genus ''[[Asclepias]]'', that have a milky [[sap]] and have [[pod]]s that split to release seeds with silky tufts.
+# A [[monarch]] [[butterfly]].
 
 ====Synonyms====
 * [[silkweed]]
