--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -18,7 +18,7 @@ From {{etyl|fr}} {{term|quadrupède|lang=fr}}, from {{etyl|frm}}, from {{etyl|la
 {{trans-mid}}
 * Icelandic: {{t|is|ferfætlingur|m}}
 * Navajo: {{tø|nv|naaldlooshii}}
-* Spanish: {{t|es|bípedo|m}}
+* Spanish: {{t|es|cuadrúpedo|m}}
 * [[Volapük]]: {{qualifier|male or female}} {{t|vo|folfutaf}}, {{qualifier|male}} {{t|vo|hifolfutaf}}, {{qualifier|female}} {{t|vo|jifolfutaf}}, {{qualifier|male or female}} {{t|vo|follögaf}}, {{qualifier|male}} {{t|vo|hifollögaf}}, {{qualifier|female}} {{t|vo|jifollögaf}}
 {{trans-bottom}}
 
