--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia}}
 [[Image:Bamboo DSCN2465.jpg|thumb|right|Bamboo.]]
-
+[[File:A aesthetic Bamboo poles.JPG|thumb]]
 ===Etymology===
 From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|samambu|lang=ms}}, from {{etyl|kn|en}} {{term|ಬಮ್ಬು|tr=bambu|lang=kn}}.
 
