--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -9,6 +9,122 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþ
 * {{IPA|/ˈbliːd/}}
 * {{rhymes|iːd}}
 
+===Verb===
+{{en-verb|bleeds|bleeding|bled}}
+
+# {{intransitive|of an animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
+# {{transitive}} To [[let]] or [[draw]] [[blood]] from an animal.
+# {{transitive}} To [[take]] large amounts of [[money]] from.
+# {{transitive}} To steadily lose (something vital).
+#: ''The company was '''bleeding''' talent.''
+# {{intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
+# {{transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
+# {{obsolete|transitive}} To bleed on; to make bloody.
+#* '''1485''', Sir Thomas Malory, ''Le Morte Darthur'', Book VIII:
+#*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.
+# {{intransitive|copulative}} To show one's group loyalty by showing (its associated color) in one's blood.
+#: ''He was a devoted Vikings fan: he '''bled''' purple.''
+
+====Derived terms====
+* [[bleed dry]]
+* [[bleeder]]
+* [[bleeding heart]]
+* [[bleed out]]
+* [[bleed to death]]
+* [[bleed white]]
+
+====Translations====
+{{trans-top|lose blood}}
+* [[American Sign Language]]: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
+* Arabic: {{t|ar|نزف|tr=nazafa}}
+* Armenian: {{t-|hy|արյունահոսել|tr=aryunahosel}}
+* {{trreq|eu}}
+* Bengali: {{t|bn|রক্ত ঝরা|sc=Beng}}, {{t|bn|রক্ত পড়া|sc=Beng}}
+* Bulgarian: {{t|bg|тече кръв}}
+* [[Catalan]]: {{t|ca|sagnar}}
+* Chinese: {{t-|cmn|流血|tr=liúxuè|sc=Hani}}, {{t|cmn|放血|tr=fàngxuè|sc=Hani}}
+* Czech: {{t-|cs|krvácet}}
+* Danish: {{t-|da|bløde}}
+* Dutch: {{t+|nl|bloeden}}
+* Esperanto: {{t-|eo|sangi|xs=Esperanto}}
+* Finnish: [[vuotaa]] [[veri|verta]]
+* French: {{t+|fr|saigner}}
+* Georgian: {{t|ka|სისხლის დენა|tr=sisxlis dena|sc=Geor|xs=Georgian}}
+* German: {{t+|de|bluten}}
+* Greek: {{t|el|αιμορραγώ||tr=aimorragó}}, {{t+|el|ματώνω||tr=matóno}}
+* Hebrew: {{t-|he|דימם|alt=דִּימֵּם|tr=dimem}}
+* {{trreq|hi}}
+* Hungarian: {{t+|hu|vérzik}}
+* Icelandic: {{qualifier|impersonal}} {{t-|is|blæða}}
+* Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
+* Irish: {{t|ga|cuir fuil|xs=Irish}}
+* Italian: {{t-|it|sanguinare}}
+* Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
+{{trans-mid}}
+* [[Khmer]]: {{Khmr|[[ចេញឈាម]]}} (jeuñ chīəum)
+* Korean: {{t|ko|피를 흘리다|sc=Hang}}
+* Latin: {{t|la|sanguinem mitto|alt=sanguinem mittō}},  {{t-|la|sanguino|alt=sanguinō}}
+* Latvian: {{t|lv|asiņot|xs=Latvian}}
+* Lithuanian: {{t|lt|kraujuoti|xs=Lithuanian}}
+* Mongolian: {{t|mn|хуудас дүүрэн зураг|tr=huudas düüren zurag|sc=Cyrl|xs=Mongolian}}
+* [[Occitan]]: [[sagnar]]
+* [[Old French]]: {{tø|fro|saingnier}}
+* Persian: {{t|fa|حجامت کردن|xs=Persian}}
+* Polish: {{t-|pl|krwawić}}
+* Portuguese: {{t+|pt|sangrar}}
+* Romanian: {{t+|ro|sângera}}
+* Russian: {{t+|ru|кровоточить|tr=krovotočít’}} (seldom used, [[иметь кровотечение]] ''imét' krovotečénije'', [[идёт кровь]] ''idjót krov''')
+* [[Scottish Gaelic]]: {{t-|gd|leig fuil|xs=Scottish Gaelic}},  {{qualifier|nose}} {{t-|gd|leum|xs=Scottish Gaelic}}
+* Simplified Chinese: {{tø|zh-cn|出血}}
+* Slovene: {{t+|sl|krvaveti}}
+* Spanish: {{t-|es|sangrar}}
+* {{trreq|sw}}
+* Swedish: {{t+|sv|blöda}}
+* [[Tagalog]]: {{t|tl|pagdugo|xs=Tagalog}}
+* Thai: {{Thai|[[ตกเลือด]]}} (dtòk lêuat)
+* Turkish: [[kanamak]] [-ar]
+* {{trreq|vi}}
+* Welsh: {{t+|cy|gwaedu|xs=Welsh}}
+* [[West Frisian]]: {{t-|fy|bliede|xs=West Frisian}}
+{{trans-bottom}}
+
+{{trans-top|draw blood}}
+* Bulgarian: {{t|bg|проливам кръв}},  {{t|bg|пускам кръв}}
+* [[Catalan]]: {{t|ca|sagnar}}
+* Irish: {{t|ga|fuiligh|xs=Irish}}
+{{trans-mid}}
+* Latin: {{t-|la|depleo|alt=dēpleō}},  {{t|la|phlebotomo|alt=phlebotomō}}
+* Portuguese: {{t|pt|sangrar}}
+* [[Tagalog]]: {{t|tl|duguan|xs=Tagalog}}
+{{trans-bottom}}
+
+{{trans-top|take money from}}
+* Bulgarian: {{t|bg|обирам}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|steadily lose}}
+* Swedish: {{t+|sv|blöda}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|spread and stain}}
+* Swedish: {{t+|sv|blöda}}
+{{trans-mid}}
+* [[Tagalog]]: {{t|tl|pagkalat|xs=Tagalog}},  {{t|tl|pagtae|xs=Tagalog}}
+{{trans-bottom}}
+
+{{trans-top|remove air bubbles}}
+* Czech: {{t-|cs|odvzdušnit}}
+* Finnish: {{t-|fi|ilmata}}
+{{trans-mid}}
+* Spanish: {{t-|es|purgar}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+* {{ttbc|he}}: [[לדמם]] (le'damem)
+{{trans-bottom}}
+
 ===References===
 * {{R:Century 1911}}
 * {{R:Webster 1913}}
