t+el:[[ρινικό διάφραγμα]] t-balance ([[WT:EDIT|Assisted]]) <nasal septum#16296610>

--- a/en/n/nasal septum.803472.wikitext
+++ b/en/n/nasal septum.803472.wikitext
@@ -13,6 +13,7 @@
 * Czech: {{t-|cs|nosní přepážka|f}}
 * French: {{t|fr|cloison|f}}
 * German: {{t|de|Nasenscheidewand|f}}
+* Greek: {{t|el|ρινικό διάφραγμα|n|tr=rinikó diáfragma|sc=Grek}}
 {{trans-mid}}
 * Italian: {{t|it|setto|m}}
 * Portuguese: {{t|pt|septo nasal|m}}
