--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -133,6 +133,7 @@ From {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}. Conflat
 * [[donkey bid]]
 * [[dummy bid]]
 {{der-mid}}
+* [[leadership bid]]
 * [[sealed bid]]
 * [[takeover bid]]
 * [[vendor bid]]
