--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -64,7 +64,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * Bulgarian: {{t|bg|полицай|m}},  {{t|bg|ченге|n}}
 * Dutch: {{t|nl|diender|m}}
 * Finnish: {{t+|fi|pollari}},  {{t+|fi|kyttä}}
-* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t+|fr|poulet|m}} (''chicken'')
+* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t+|fr|poulet|m}}
 * German: {{t|de|Gendarm}}
 * Greek: {{t|el|μπάτσος|m|tr=bátsos|sc=Grek}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t-|he|שוטרת|f|tr=shotéret}}
