--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -21,9 +21,10 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 * Catalan: {{t|ca|geneta|f}}
 * Chinese: {{t|cmn|獛|tr=[[pú]]|sc=Hani}}
 * Finnish: {{t|fi|genetti}}
-{{trans-mid}}
 * French: {{t|fr|genette|f}}
 * German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
+{{trans-mid}}
+* Navajo: {{tø|nv|dlǫ́ʼiitsoh áłtsʼózígíí}}
 * Russian: {{t|ru|генетта|f|sc=Cyrl|tr=genétta|alt=гене́тта}}, {{t|ru|генета|f|sc=Cyrl|tr=genéta|alt=гене́та}}
 * Spanish: {{t|es|jineta}}
 {{trans-bottom}}
