--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -20,10 +20,11 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 {{trans-top|mammal of the genus ''Genetta''}}
 * Catalan: {{t|ca|geneta|f}}
 * Chinese: {{t|cmn|獛|tr=[[pú]]|sc=Hani}}
+* Dutch: {{t|nl|genet}}
 * Finnish: {{t|fi|genetti}}
 * French: {{t|fr|genette|f}}
-* German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
 {{trans-mid}}
+* German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
 * Navajo: {{tø|nv|dlǫ́ʼiitsoh áłtsʼózígíí}}
 * Russian: {{t|ru|генетта|f|sc=Cyrl|tr=genétta|alt=гене́тта}}, {{t|ru|генета|f|sc=Cyrl|tr=genéta|alt=гене́та}}
 * Spanish: {{t|es|jineta}}
