/* Related terms */ <rot#16310259>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -184,6 +184,17 @@ From {{etyl|gmh|de}} {{term|rot|rōt|lang=gmh|red, red-haired}}, from {{etyl|goh
 
 ----
 
+==Low German==
+
+===Adjective===
+{{head|nds|adjective}}
+
+# {{alternative spelling of|root|lang=nds}}
+
+[[Category:nds:Colors]]
+
+----
+
 ==Norwegian==
 
 ===Verb===
