tgloss:to take a risk, with the potential of a positive outcome t+cs:[[riskovat]] <gamble#16313653>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -59,6 +59,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * Chinese:
 *: Mandarin: {{t|zh|賭博|sc=Hani}}, {{t|zh|赌博|tr=dǔbó|sc=Hani}}, {{t|zh|賭錢|sc=Hani}}, {{t|zh|赌钱|tr=dǔqián|sc=Hani}}
 * Croatian: {{t-|hr|kockati|alt=kȍckati se}}
+* Czech: {{t|cs|riskovat}}
 * Dutch: {{t+|nl|gokken}}
 * Finnish: {{t|fi|ottaa riski}}
 * French: {{t+|fr|parier}}
