--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -14,8 +14,9 @@
 * Bengali: {{t-|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
 * Czech: {{t|cs|Ruská sovětská federativní socialistická republika|f}}
 * Finnish: [[Venäjän Sosialistinen Federatiivinen Neuvostotasavalta]]
-* [[Macedonian]]: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
+* German: {{t|de|Russische Sozialistische Föderative Sowjetrepublik|f}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
 * Russian: {{t-|ru|Российская Советская Федеративная Социалистическая Республика|f|tr=Rossíjskaja Sovétskaja Federatívnaja Sotsialistíčeskaja Respublika}}
 {{trans-bottom}}
 
