--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|AT}}
 
 ===Etymology===
-From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{proto|Germanic|ata||at|at, near, to|lang=en}}, from {{proto|Indo-European|ad|to, near, by}}. Cognate with {{etyl|frr|-}} {{term|et|lang=frr}}, {{term|it||at|lang=frr}}, {{etyl|da|-}} {{term|at||to|lang=da}}, {{etyl|fo|-}} {{term|at||at, to, toward|lang=fo}}, {{etyl|no|-}} {{term|åt||to|lang=no}}, {{etyl|sv|-}} {{term|åt||for, toward|lang=sv}}, {{etyl|is|-}} {{term|að||to, towards|lang=is}}.
+From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{proto|Germanic|at|at, near, to|lang=en}}, from {{proto|Indo-European|ad|to, near, by|lang=en}}. Cognate with {{etyl|sco|-}} {{term|at||at|lang=sco}}, {{etyl|frr|-}} {{term|et|lang=frr}}, {{term|it||at|lang=frr}}, {{etyl|da|-}} {{term|at||to|lang=da}}, {{etyl|fo|-}} {{term|at||at, to, toward|lang=fo}}, {{etyl|no|-}} {{term|åt||to|lang=no}}, {{etyl|sv|-}} {{term|åt||for, toward|lang=sv}}, {{etyl|is|-}} {{term|að||to, towards|lang=is}}, {{etyl|got|-}} {{term|𐌰𐍄||at|tr=at|lang=got}}, {{etyl|la|-}} {{term|ad||to , near|lang=la}}.
 
 ===Pronunciation===
 * {{qualifier|stressed}} {{enPR|ăt}}, {{IPA|/æt/}}, {{SAMPA|/{t/}}
