/* Translations */restrict adjective translation to lemma using [[Project:AWB|AWB]] <leather#16326386>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -113,14 +113,14 @@
 * Finnish: [[nahka]]-, [[nahkainen]]
 * Lithuanian: {{t|lt|odinis}}
 * Persian: {{t-|fa|چرمی|tr=charmi|xs=Persian}}
-* Polish: [[skórzany]] {{m}}, [[skórzana]] {{f}}, [[skórzane]] {{n}}
+* Polish: [[skórzany]]
 {{trans-mid}}
 * Romanian: din [[piele]] (fabricat)
 * Russian: {{t+|ru|кожаный|tr=kóžanyj}}
 * Serbian:
 *: Cyrillic: [[кожни#Serbian|кожни]] {{m}}
 *: Roman: [[kožni#Serbian|kožni]] {{m}}
-* Slovene: [[usnjen]] {{m}}, [[usnjena]] {{f}}, [[usnjeno]] {{n}}
+* Slovene: [[usnjen]]
 * Turkish: {{t+|tr|deri}}
 {{trans-bottom}}
 
