t+wa:[[cur]] ([[WT:EDIT|Assisted]]) <leather#16327942>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -77,6 +77,7 @@
 * Thai: {{t-|th|หนัง|tr=năng}}
 * Turkish: {{t+|tr|deri}}
 * Vietnamese: {{t|vi|da thuộc}}
+* Walloon: {{t|wa|cur|m}}
 {{trans-bottom}}
 
 {{trans-top|piece of leather used for polishing}}
