--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Hebrew: {{t|he|אז|tr=az|sc=Hebr}}
 * Hindi: {{t|hi|तब|tr=tab|sc=Deva}}
 * Hungarian: {{t+|hu|akkor}}
+* Indonesian: {{t|id|saat itu}}
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}} ({{t|ja|その時}}), {{t|ja|その時点|tr=そのじてん, sono jiten}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
