--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -56,6 +56,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Lithuanian: {{t+|lt|šeškas|xs=Lithuanian}}
 * Lower Sorbian: [[twoŕ]]
 * Macedonian: [[обичен твор]] ([[običen tvor]])
+* Navajo: {{tø|nv|tó wónaanídę́ę́ʼ dlǫ́ʼii}}
 * Norwegian: {{t|no|ilder}}
 * Occitan: [[catpudre]]
 * Polish: {{t+|pl|tchórz}}
