/* translation gloss:building housing a grinding apparatus */ +cs:[[mlýn]] <mill#16348779>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -90,6 +90,7 @@
 {{trans-top|building housing a grinding apparatus}}
 * [[Azeri]]: {{t|az|dəyirman}}
 * [[Catalan]]: {{t|ca|molí|m}}
+* Czech: {{t|cs|mlýn}}
 * Esperanto: {{t|eo|muelejo}}
 * Finnish: {{t+|fi|mylly}}
 * French: {{t|fr|moulin}}
