--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -60,13 +60,13 @@
 * Scots: [[futret]] (''Doric dilect'')
 * Scottish Gaelic: {{t-|gd|neas|f|xs=Scottish Gaelic}}, {{t-|gd|fearaid|f|xs=Scottish Gaelic}}
 * Serbian: [[vretna]] {{f}}
-* Slovak: [[Fretka tchorovitá]]
+* Slovak: [[fretka tchorovitá]]
 * Slovene: [[beli dihur]] {{m}}
 * Spanish: {{t+|es|hurón|m}}
 * Swedish: {{t|sv|tamiller}}
 * Tamil: {{t|ta|மரநாய் வகை|tr=ma.ra.nai |sc=Taml}}
 * Turkish: [[yaban]], [[dağ gelinciği]]
-* Ukrainian: [[тхiр африканский]] ([[thir afrikanskij]])
+* Ukrainian: [[тхiр африканский]] (txir afrykanskyj)
 * Upper Sorbian: [[łasyčka]]
 * Welsh: [[ffured]]
 * West Frisian: [[fret]]
