t+ja:[[ブタ]] ([[WT:EDIT|Assisted]]) <pig#16370717>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -107,7 +107,7 @@
 * Interlingua: [[porco#Interlingua|porco]]
 * Irish: {{t+|ga|muc|f|xs=Irish}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}
-* Japanese: {{t|ja|豚|tr=[[ぶた]], buta}}
+* Japanese: {{t|ja|豚|tr=[[ぶた]], buta}}, {{t|ja|ブタ|tr=buta|sc=Jpan}}
 * Karelian: [[počči]]
 {{trans-mid}}
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
