t+uz:[[choʻchka]] t+tt:[[дуңгыз]] t-balance t+tt:[[чучка]] ([[WT:EDIT|Assisted]]) <pig#16370762>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -110,8 +110,8 @@
 * Kazakh: {{t|kk|шошқа|tr=şoşqa|sc=Cyrl}}
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kuanua: {{tø|ksd|boroi}}
-{{trans-mid}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
+{{trans-mid}}
 * Kyrgyz: {{t|ky|чочко|tr=çoçko|sc=Cyrl}}
 * Ladin: [[porcel]]
 * Latgalian: {{tø|ltg|cyuka|f}}
@@ -154,6 +154,7 @@
 * Tagalog: [[baboy]]
 * Tajik: {{t|tg|хук|tr=xuk|sc=Cyrl}}
 * Taos: [[kùci’ína]]
+* Tatar: {{t|tt|дуңгыз|tr=duñğız|sc=Cyrl}}, {{t|tt|чучка|tr=çuçqa|sc=Cyrl}}
 * Telugu: [[పంది]] (paMdi)
 * Thai: {{t|th|หมู|tr=mŏo|sc=Thai}}
 * Tok Pisin: [[pik]]
@@ -165,6 +166,7 @@
 * Upper Sorbian: [[swinjo]] {{n}}
 * Urdu: {{t|ur|خوک|sc=ur-Arab}}, {{t|ur|خنزیر|sc=ur-Arab}}, {{t|ur|سور|m|tr=sū'ar|sc=ur-Arab}}
 * Uyghur: {{t|ug|چوشقا|sc=ug-Arab}}
+* Uzbek: {{t|uz|choʻchka}}
 * Veps: [[siga#Veps|siga]]
 * Vietnamese: {{t|vi|chi lợn}}
 * Volapük: {{qualifier|male or female}} {{t|vo|svin}}, {{qualifier|male}} {{t|vo|hisvin}}, {{qualifier|female}} {{t|vo|jisvin}}, {{qualifier|male, obsolete}} {{t|vo|omsvin}}, {{qualifier|domestic}} {{t|vo|domasvin}}
