--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -51,6 +51,8 @@ Please distinguish between the Frisian language group, the West Frisian language
 * {{langcat}}
 * {{langlist}}
 
+[[Category:en:Languages]]
+
 [[et:West Frisian]]
 [[fy:West Frisian]]
 [[no:West Frisian]]
