--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -112,6 +112,15 @@ From {{etyl|enm}} {{term|sir|lang=enm}}, from {{etyl|fro}} {{term|sire||master, 
 
 ----
 
+==Lojban==
+
+===Rafsi===
+{{jbo-rafsi}}
+
+# {{rafsi of|sirji}}
+
+----
+
 ==Scottish Gaelic==
 
 ===Verb===
