--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -85,6 +85,7 @@
 * Spanish: {{t+|es|molino|m}}
 * Swedish: {{t+|sv|kvarn|c}}
 * Turkish: {{t+|tr|değirmen}}
+* Welsh: {{t|cy|melin|f}}
 {{trans-bottom}}
 
 {{trans-top|building housing a grinding apparatus}}
