--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -14,6 +14,9 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 # A [[lottery]] ticket that does not give a payout.
 # {{obsolete}} Clothes, now always used in plural form [[duds]].
 
+====Synonyms====
+* {{sense|losing lottery ticket}} [[blank]]
+
 ====Translations====
 {{trans-top|broken or nonfunctional device that does not perform its intended function}}
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
