--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -20,7 +20,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 #: ''I've got ten divisions to do for my homework.''
 # {{military}} A [[formation]], usually made up of two or three [[brigade]]s.
 # A [[section]] of a large [[company]].
-# {{context|biology|taxonomy}} A [[rank]] (Latin ''divisio'') below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank
+# {{biology|taxonomy}} A [[rank]] (Latin ''divisio'') below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank
 #: ''Magnolias belong to the '''division''' Magnoliophyta.''
 # A disagreement; a difference of viewpoint between two sides of an argument.
 # {{music}} A florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
@@ -48,9 +48,9 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 
 ====Translations====
 {{trans-top|act or process of dividing anything}}
-* [[Afrikaans]]: [[verdeling]],  {{t|af|divisie|xs=Afrikaans}}
+* [[Afrikaans]]: [[verdeling]], {{t|af|divisie|xs=Afrikaans}}
 * Albanian: {{t|sq|ndarje|xs=Albanian}}
-* Bulgarian: {{t|bg|делене|n}},  {{t|bg|разделяне|n}}
+* Bulgarian: {{t|bg|делене|n}}, {{t|bg|разделяне|n}}
 * Czech: {{t-|cs|dělení|n}}
 * Dutch: [[deling]] {{f}}; [[verdeling]] {{f}}; [[scheiding]] {{f}}
 * Esperanto: {{t-|eo|divido|xs=Esperanto}}, {{t|eo|dividado}}
@@ -71,7 +71,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Russian: {{t+|ru|раздел|m|tr=razdél}}, {{t+|ru|деление|n|tr=delénije}}
 * Slovene: [[deljenje]] {{n}}
 * Spanish: {{t+|es|división|f}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[విభజన]]
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
@@ -80,7 +80,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 
 {{trans-top|each of the parts resulting from division}}
 * [[Afrikaans]]: [[gedeelte]]
-* Bulgarian: {{t+|bg|част|f}},  {{t+|bg|раздел|m}}
+* Bulgarian: {{t+|bg|част|f}}, {{t+|bg|раздел|m}}
 * Czech: {{t-|cs|díl|m}}
 * Dutch: {{t+|nl|deel|n}}, {{t+|nl|gedeelte|n}}
 * Finnish: {{t+|fi|osa}}
@@ -89,7 +89,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Indonesian: {{t|id|bagian|xs=Indonesian}}
 * Kurdish: {{t-|ku|به‌ش|sc=ku-Arab}}
 * [[Malayalam]]: [[വിഭാഗം]] (vibhaagam)
-* Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 * [[West Frisian]]: {{t|fy|ôfdieling|c|xs=West Frisian}}
 {{trans-bottom}}
 
@@ -113,7 +113,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Romanian: {{t-|ro|impartire|f}}
 * Russian: {{t+|ru|деление|n|tr=delénije}}
 * Slovene: [[deljenje]] {{n}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[భాగహారము]]
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
@@ -131,7 +131,7 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 {{trans-mid}}
 * Polish: {{t+|pl|dzielenie|n}}
 * Russian: {{t+|ru|деление|n|tr=delénije}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 * Swedish: {{t+|sv|division|c}}
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 * [[West Frisian]]: {{t|fy|dieling|c|xs=West Frisian}}
@@ -181,15 +181,15 @@ From {{etyl|la}} {{term|divisio|lang=la}}, noun of process form from perfect pas
 * Czech: {{t-|cs|oddělení|f}}
 * Finnish: {{t+|fi|kaari}}, {{t-|fi|pääjakso}}
 * [[Khmer]]: {{t|km|សាខា|tr=sar khar|sc=Khmr}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
+* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 {{trans-mid}}
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 * [[West Frisian]]: {{t-|fy|klasse|c|xs=West Frisian}}
 {{trans-bottom}}
 
 {{trans-top|disagreement; a difference of viewpoint}}
-* Greek: {{t|el|διχόνοια|f|tr=δikhónia}},  {{t+|el|διχασμός|m|tr=δikhasmós}}
-* Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
+* Greek: {{t|el|διχόνοια|f|tr=δikhónia}}, {{t+|el|διχασμός|m|tr=δikhasmós}}
+* Swahili: {{t+|sw|ugavi|xs=Swahili}}, {{t+|sw|farakano|xs=Swahili}}
 {{trans-mid}}
 * [[West Frisian]]: {{t|fy|ôfstimming|c|xs=West Frisian}}
 {{trans-bottom}}
@@ -244,11 +244,13 @@ From {{etyl|la|fr}} {{term|divisio|lang=la}}, noun of process form from perfect 
 From {{etyl|la|sv}} {{term|divisio|lang=la}}, noun of process form from perfect passive participle {{term|divisus||divided|lang=la}}, from {{term|divido|dīvidō|divide|lang=la}}
 
 ===Noun===
-{{sv-noun-reg-r-c|2=divisione}}
-'''division''' {{c}}
+{{sv-noun|g=c}}
 
 # [[division#English|division]]; act of dividing (e.g. numbers); large military unit; section of a company
 # {{sports|lang=sv}} division, [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
+
+====Declension====
+{{sv-noun-reg-r-c|2=divisione}}
 
 [[ar:division]]
 [[cs:division]]
