--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -4,7 +4,7 @@
 {{en-noun|sg=[[public]] [[school]]}}
 
 # {{British}} A fee-charging [[private]] or independent [[school]].
-# {{US, Canada, Australia}} A publicly administered school.
+# (US, Canada, Australia) A publicly administered school.
 
 ====Translations====
 {{trans-top|private school}}
