--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -128,7 +128,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 
 ====Translations====
 {{trans-top|to divide intio fractions}}
-* Finnish: {{t-|fi|fraktioida}}, {{t|fi|jakaa}}
+* Finnish: {{t-|fi|fraktioida}}, {{t|fi|jakaa}}, {{t|fi|pilkkoa}}
 {{trans-mid}}
 {{trans-bottom}}
 
