--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -1,6 +1,6 @@
 {{wikipedia}}
 ==English==
-[[Image:Eichhörnchen Düsseldorf Hofgarten edit.jpg|thumb|Red Squirrel doing push-ups.|250px]]
+[[Image:Eichhörnchen Düsseldorf Hofgarten edit.jpg|thumb|Red Squirrel|250px]]
 
 ===Etymology===
 From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|lang=fro}} (whence French {{term|écureuil|lang=fr}}), from {{etyl|VL.}} {{term|scuriolus|lang=la}}, diminutive of {{term|scurius|lang=la}}, variant of {{etyl|la}} {{term|sciurus|lang=la}}, from {{etyl|grc}} {{term|σκίουρος|lang=grc|sc=polytonic|tr=skiouros}}.
