t+eo:[[ĉeesti]] t-balance ([[WT:EDIT|Assisted]]) <attend#16454683>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -47,10 +47,11 @@ From {{etyl|fro}} {{term|atendre}}, from {{etyl|la}} {{term|attendere||to stretc
 *: Mandarin: {{t-|cmn|出席|tr=chūxí|sc=Hani}}
 * Czech: {{t|cs|zúčastnit se}}, {{t|cs|účastnit se}}
 * Dutch: {{t+|nl|volgen}},  {{t+|nl|bijwonen}},  {{t|nl|aanwezig zijn}}
+* Esperanto: {{t|eo|ĉeesti}}
 * Finnish: {{t+|fi|osallistua}}, {{t+|fi|olla}} {{t+|fi|läsnä}}
 * French: {{t+|fr|assister}},  {{t+|fr|présent|alt=être présent}}
-* German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 {{trans-mid}}
+* German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 * Hungarian: {{t|hu|eljár}}, {{t+|hu|jár}}
 * Italian: {{t|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki-surú}},  {{t|ja|立ち会う|tr=たちあう, tachiau}}
