t+ar:[[فأر المسك]] ([[WT:EDIT|Assisted]]) <muskrat#16468080>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -25,6 +25,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a [[rat]]
 
 ====Translations====
 {{trans-top|rodent}}
+* Arabic: {{t|ar|فأر المسك|sc=Arab}}
 * [[Basque]]: {{t|eu|arratoi musketadun|xs=Basque}}
 * Belarusian: {{t|be|андатра|f|xs=Belarusian}}
 * Bosnian: {{t|bs|bizamski pacov|m}}
