--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -7,7 +7,7 @@
 * [[fufu]]
 
 ===Etymology===
-From West African languages such as {{etyl|Ewe|en}} {{term|fufú||lang=ln}} meaning 'white-white'
+From West African languages such as [[Ewe]], {{term|fufú||lang=ln}} meaning 'white-white'
 
 ===Noun===
 {{en-noun|-}}
