--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -40,6 +40,12 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 ====Synonyms====
 * See also [[Wikisaurus:supposition]]
 
+====Holonyms====
+* {{sense|in logic}} [[formal system]]
+
+====Meronyms====
+* {{sense|in logic}} [[axiom]]s
+
 ====Derived terms====
 {{rel-top3|terms derived from theory}}
 * [[acoustic theory]]
