--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -28,7 +28,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Finnish: {{t-|fi|Nintendo}}
 {{trans-mid}}
 * French: {{t|fr|Nintendo|f}}
-* Japanese: {{t|ja|ニンテンドー|tr=Nintendō}},  {{t+|ja|ファミコン|tr=famikon}}
+* Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}},  {{t+|ja|ファミコン|tr=famikon}}
 * Russian: {{t|ru|Нинтендо|tr=Ninténdo}}
 {{trans-bottom}}
 
