--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -26,10 +26,11 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Chinese:
 *: Mandarin: {{t-|cmn|任天堂|tr=Réntiāntáng|sc=Hani}}
 * Finnish: {{t-|fi|Nintendo}}
-{{trans-mid}}
 * French: {{t|fr|Nintendo|f}}
+{{trans-mid}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}},  {{t+|ja|ファミコン|tr=famikon}}
 * Russian: {{t|ru|Нинтендо|tr=Ninténdo}}
+* Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
 {{trans-bottom}}
 
 [[fr:Nintendo]]
