--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -4,11 +4,11 @@
 * {{sense|GNU Compiler Collection}} GCC was originally an acronym for "GNU C Compiler", now a [[backronym]] for "GNU Compiler Collection".
 * {{sense|Gulf Cooperation Council}} {{initialism of|Gulf Cooperation Council}}
 
-==={{initialism}}===
-'''GCC'''
+===Initialism===
+{{en-initialism}}
 
-# {{computing}} [[GNU]] [[compiler|Compiler]] [[collection|Collection]] &mdash; A collection of [[compilers]] for C, C++, Fortran, etc. aiming to be standards-compliant and correct.
-# {{politics}} [[Gulf]] [[cooperating|Cooperation]] [[council|Council]] &mdash; a multinational body of countries of the [[Persian Gulf]] area.
+# {{computing}} {{initialism of|[[GNU]] [[compiler|Compiler]] [[collection|Collection]]}} It is a collection of [[compilers]] for C, C++, Fortran, etc. aiming to be standards-compliant and correct.
+# {{politics}} {{initialism of|[[Gulf]] [[cooperating|Cooperation]] [[council|Council]]}} It is a multinational body of countries of the [[Persian Gulf]] area
 
 ===See also===
 {{sense|GNU C Compiler}}
