--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|sg=[[ulterior]] [[Motive]]}}
+{{en-noun|sg=[[ulterior]] [[motive]]}}
 
 # An [[alternative]] or [[extrinsic]] [[reason]] for doing something, especially when concealed or when differing from the [[stated]] or [[apparent]] reason.
 #* '''1895''', [[w:Arthur_Conan_Doyle|Sir Arthur Conan Doyle]], ''The Stark Munro Letters'', ch. 9,
