--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -184,6 +184,7 @@
 * Armenian: {{t-|hy|խոզ|tr=xoz}}, {{t-|hy|կաշալոտ|tr=kašalot}}
 * Catalan: {{t|ca|golafre|m}}
 * Dutch: {{t+|nl|varken|n}}, {{t+|nl|zwijn|n}}, {{t|nl|slokop|m|f}}
+* Esperanto: {{t|eo|porko}}
 * Finnish: {{t+|fi|porsas}}, {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
