t+es:[[mínimo]] ([[WT:EDIT|Assisted]]) <minimum#16504114>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -58,6 +58,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * Latin: {{t-|la|minimum}}
 * Romanian: {{t-|ro|minimum}}
 * Russian: {{t+|ru|минимум|m|tr=mínimum}}
+* Spanish: {{t|es|mínimo}}
 * Swedish: {{t+|sv|minimum|n}}
 * [[Telugu]]: [[కనిష్టం]] (kanishTaM)
 * Vietnamese: {{t+|vi|tối thiểu|xs=Vietnamese}}
