--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -33,7 +33,7 @@ Used with the definite article {{term|the}}.
 * Armenian: {{t-|hy|Բալկաններ|tr=Balkanner}}
 * [[Asturian]]: {{t-|ast|Balcanes|m|xs=Asturian}}
 * {{trreq|Bosnian}}
-* {{trreq|Bulgarian}}
+* Bulgarian: {{t|bg|Балкани|p|tr=balkani|sc=Cyrl}}
 * [[Catalan]]: {{t-|ca|Balcans|m|p}}
 * Chinese:
 *: Mandarin: {{t|zh|巴爾幹|sc=Hani}}, {{t|zh|巴尔干|tr=Bā'ěrgàn|sc=Hani}}, {{t|zh|巴爾幹半島|sc=Hani}}, {{t|zh|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
