--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -22,19 +22,22 @@
 
 ====Translations====
 {{trans-top|the act of consuming something}}
-* Arabic: {{t|ar|استهلاك|tr=eestihlek|sc=Arab}}
+* Arabic: {{t|ar|استهلاك|tr=eestihlek|sc=Arab}}, {{t|ar|استهلاك|m|tr=istihlāk|sc=Arab}}
 * Bulgarian: {{t+|bg|консумиране|f}}, {{t+|bg|изразходване|n}}
 * [[Catalan]]: {{t|ca|consum|m}}
+* Chinese:
+*: Mandarin: {{t|zh|消費|sc=Hani}}, {{t|zh|消费|tr=xiāofèi|sc=Hani}}
 * Czech: {{t-|cs|spotřeba|f}}, {{t-|cs|zničení|n}}
 * Dutch: {{t+|nl|consumptie|f}}, {{t+|nl|verbruik|n}}
 * Finnish: {{t|fi|kuluttaminen}}, {{t|fi|kulutus}}
 * French: {{t+|fr|consommation}}, {{t+|fr|consommer|m}}, {{t+|fr|consumer|m}}
 * German: {{t+|de|Konsum|m}}, {{t-|de|Verzehr|m}}
-* Hebrew: {{t|he|צריכה|tr=tzrikha|f}} {{qualifier|act of consuming goods}}
 {{trans-mid}}
+* Hebrew: {{t|he|צריכה|tr=tzrikha|f}} {{qualifier|act of consuming goods}}
 * Hungarian: {{t+|hu|fogyasztás}}
 * [[Interlingua]]: {{t|ia|consumo}}
 * Japanese: {{t|ja|消費|tr=しょうひ, shōhi}}
+* Korean: {{t|ko|소비|tr=sobi|sc=Kore}}, {{t|ko|消費|sc=Kore}}
 * Portuguese: {{t+|pt|consumo|m}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}
 * [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
