--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -1,4 +1,16 @@
 {{also|multi-|mulți}}
+==Esperanto==
+
+===Verb===
+{{eo-verb|mult}}
+
+# to [[be]] [[many]], [[be]] [[numerous]]
+
+====Conjugation====
+{{eo-conj|mult|intr=yes}}
+
+----
+
 ==Italian==
 
 ===Verb===
