--- a/en/a/accusement.34083.wikitext
+++ b/en/a/accusement.34083.wikitext
@@ -3,8 +3,8 @@
 ===Etymology===
 {{etyl|fro}} {{term|acusement|lang=fro}}. See also {{term|accuse}}.
 
-===Pronunciation===
-{{rfp|lang=en}}
+===Pronunciation=== 
+*{{a|UK}} {{IPA|/əˈkjuːzmənt/|lang=en}} 
 
 ===Noun===
 {{en-noun}}
