t+el:[[σφύριγμα]] t+el:[[σφυρίζω]] t-balance t+el:[[σφυριξιά]] ([[WT:EDIT|Assisted]]) <whistle#16521202>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -77,6 +77,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t-|cmn|口笛|tr=kǒudí|sc=Hani}}
 * German: {{t+|de|Pfeifen|n}}
+* Greek: {{t|el|σφύριγμα|n|tr=sfýrigma|sc=Grek}}
 * Hebrew: {{t-|he|שריקה|f|tr=sh'riká}}
 * Japanese: {{t-|ja|口笛|tr=くちぶえ, kuchibue}}
 {{trans-mid}}
@@ -95,6 +96,7 @@
 * Finnish: {{t-|fi|vihellys}}, {{t|fi|vislaus}}
 * French: {{t|fr|sifflement|m}}, {{t|fr|sifflements|m|p}}
 * German: {{t+|de|Pfeifen|n}},  {{t+|de|Pfiff|m}}
+* Greek: {{t|el|σφύριγμα|n|tr=sfýrigma|sc=Grek}}, {{t|el|σφυριξιά|f|tr=sfyrixiá|sc=Grek}}
 * Hungarian: {{t|hu|füttyszó}}
 * Italian: {{t+|it|fischio|m}}
 {{trans-mid}}
@@ -116,6 +118,7 @@
 * Dutch: [[fluittoon]] {{m}}
 * Finnish: {{t-|fi|vihellys}}
 * German: {{t+|de|Pfeifen|n}},  {{t+|de|Pfiff|m}}
+* Greek: {{t|el|σφύριγμα|n|tr=(sfýrigma|sc=Grek}}
 * Hungarian: [[sípszó]]
 {{trans-mid}}
 * Polish: [[gwizd]] {{m}}
@@ -172,6 +175,7 @@
 * Finnish: {{t-|fi|viheltää}}
 * French: {{t+|fr|siffler}}
 * German: {{t+|de|pfeifen}}
+* Greek: {{t|el|σφυρίζω|tr=sfyrízo|sc=Grek}}
 * Hungarian: {{t+|hu|fütyül}}
 * [[Interlingua]]: {{t|ia|sibilar}}
 {{trans-mid}}
@@ -195,6 +199,7 @@
 * Danish: {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
 * Finnish: {{t-|fi|viheltää}}
+* Greek: {{t|el|σφυρίζω|tr=sfyrízo|sc=Grek}}
 * Hungarian: {{t+|hu|fütyül}}, {{t|hu|sivít}}
 {{trans-mid}}
 * Russian: {{t+|ru|свистеть|tr=svistét’}} {{impf}}, {{t|ru|просвистеть|tr=prosvistét’}} {{pf.}}
