/* Translations */ + (es) <leave out#16522828>

--- a/en/l/leave out.741825.wikitext
+++ b/en/l/leave out.741825.wikitext
@@ -27,7 +27,7 @@
 * Italian: {{t+|it|omettere}}
 * Polish: {{t+|pl|pomijać}}
 * Russian: гл. [[пропускать]], не [[включать]]
-* Spanish: {{t|es|omitir}}
+* Spanish: {{t|es|omitir}}, [[dejar]] [[de]] [[lado]]
 {{trans-bottom}}
 
 [[Category:English phrasal verbs]]
