t+gd:[[sanas-reic]] ([[WT:EDIT|Assisted]]) <advertisement#16522872>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -82,6 +82,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t+|pt|reclame|m}}, {{t+|pt|propaganda|f}}
 * Romanian: [[anunț]] {{n}} [[publicitate]] {{f}}, [[reclamă]] {{f}}
 * Russian: {{t+|ru|реклама|f|tr=rekláma}},  {{t+|ru|объявление|n|tr=ob”javlénije}},  {{t|ru|анонс|m|tr=anóns}},  {{t|ru|заявление|n|tr=zajavlénije}}
+* Scottish Gaelic: {{t|gd|sanas-reic|m}}
 * Serbian: [[oglas]], [[objavljenje]], [[izveštenje]]
 * Slovene: {{t+|sl|oglas|m}}, {{t-|sl|reklama|f}}
 * Spanish: {{t-|es|anuncio|m}}, {{t+|es|publicidad|f}}, {{t+|es|reclamo|m}}
